2009-01-21  Frederic Crozat  <fcrozat@mandriva.com>

	* fish.c: Fix format security warnings.

==================== 2.25.5.1 ====================

==================== 2.25.5 ====================

2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: add LIBPANEL_APPLET_LIBS to LDADD since we don't really
	use the libpanel-applet pkg-config file. Fix build issue with
	"-Wl,-z,defs".

==================== 2.25.3 ====================

2008-12-11  Vincent Untz  <vuntz@gnome.org>

	* fish.c: (show_help): get rid of
	gnome_help_display_desktop_on_screen(), and improve code

2008-12-11  Vincent Untz  <vuntz@gnome.org>

	* fish.c: (display_fortune_dialog): kill GNOME_PAD, and also use
	g_markup_printf_escaped() instead of g_strdup_printf()

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* fish.c: (get_location): use g_file_read_link() instead of readlink().
	But the code is broken anyway...

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* fish.c: add missing include for glib/gi18n.h

==================== 2.24.2 ====================

==================== 2.24.1 ====================

==================== 2.24.0 ====================

==================== 2.23.92 ====================

==================== 2.23.91 ====================

==================== 2.23.90.1 ====================

==================== 2.23.90 ====================

==================== 2.23.6 ====================

==================== 2.23.5 ====================

==================== 2.23.4 ====================

==================== 2.23.3 ====================

==================== 2.23.2.1 ====================

==================== 2.23.2 ====================

==================== 2.23.1 ====================

==================== 2.22.1.3 ====================

==================== 2.22.1.2 ====================

==================== 2.22.1.1 ====================

==================== 2.22.1 ====================

==================== 2.22.0 ====================
