@@ -1,3 +1,7 @@
+2009-01-23  Vincent Untz  <vuntz@gnome.org>
+
+	* fish.c: (get_location): fix some more warnings.
+
 2009-01-21  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* fish.c: Fix format security warnings.
